# pyfracgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  examples.py  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  pypi-publish.yml  test-and-publish.yml  test-on-push.yml  test.yml
pyfracgen/: __init__.py  buddhabrot.py  common.py  julia.py  lyapunov.py  mandelbrot.py  randomwalk.py  result.py  types.py
pyfracgen/images/: images.py
pyfracgen/iterfuncs/: funcs.py
pyfracgen/updaters/: funcs.py
tests/: __init__.py  assertions.py  conftest.py  fixtures.py  test_julia.py  test_mandelbrot.py
