[project]
name = "pyfracgen"

[tool.poetry]
name = "pyfracgen"
version = "0.3.0"
description = "Python Fractal Generation is a package for generating aesthetic fractal images quickly and (hopefully) easily"
authors = ["Ryther Anderson"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rytheranderson/pyfracgen"
include = [
    "README.md",
    "pyproject.toml",
]
packages = [
  {include = "pyfracgen"}
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numba = ">=0.59.0rc1"
numpy = "^1.26.2"
nptyping = "^2.5.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.99.13"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.3.4"
tbump = "^6.11.0"
tox = "^3.28.0"
tox-gh-actions = "^2.12.0"
tox-poetry-installer = "^0.10.3"

[tool.ruff.lint]
# B = flake8-bugbear
# C9 = mccabe complexity
# E = pycodestyle error
# F = pyflakes
# N = pep8-naming
# PL = pylint
# Q = flake8-quotes
# RUF = ruf
# W = pycodestyle warning
select = ["B", "C9", "D", "E", "F", "N", "PL", "Q", "RUF", "W"]
ignore = ["D10", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tbump.version]
current = "0.3.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'current = "0.3.0"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "0.3.0"'

[[tool.tbump.file]]
src = "pyfracgen/__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    'fractals',
    'Mandelbrot set',
    'Julia set',
    'Markus-Lyapunov fractal',
    'random walk'
]
